--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,13 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "connect-mongo": "^3.2.0",
+    "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "localStorage": "^1.0.4",
     "mongoose": "^5.10.9",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
@@ -26,7 +29,8 @@
     "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.0.1"
+    "passport-local-mongoose": "^6.0.1",
+    "window": "^4.2.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
